# python

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  dangerfile.py  dangerfile.ts  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  danger.yml
danger_python/: __init__.py  cli.py  danger.py  decorators.py  exceptions.py  models.py  plugins.py  shell.py
danger_python/cli/: main.py
danger_python/generator/: builder.py  models.py  parser.py  renderer.py
danger_python/generator/templates/: dsl.py.jinja
fixtures/: typescript-34806.json
scripts/: generate_scheme.py  input_schema.json
tests/: conftest.py  test_cli.py  test_danger.py  test_model.py  test_models.py  test_plugins.py  test_shell.py
tests/cli/: test_main.py
tests/fixtures/: danger.py  input_schema.json  shell.py  typescript-34806.json.jinja
tests/generator/: test_builder.py  test_model.py  test_parser.py  test_renderer.py
