[tool.poetry]
name = "danger-python"
version = "0.0.1"
description = "Write your Dangerfiles in Python."
authors = ["Jakub Turek <jkbturek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
click-default-group = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
danger-python = 'danger_python.cli.main:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

