[tool.poetry]
name = "danger-python"
version = "0.1.0"
description = "Write your Dangerfiles in Python."
authors = [
    "Orta Therox <danger@orta.io>",
    "Jakub Turek <jkbturek@gmail.com>",
    "Danger org contributors",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
click-default-group = "^1.2.2"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^2.8.1"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.761"
flake8 = "^3.7.9"
pylint = "^2.4.4"
jinja2 = "^2.10.3"
pyfakefs = "^3.7.1"
stringcase = "^1.2.0"

[tool.poetry.scripts]
danger-python = 'danger_python.cli:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

