[tool.poetry]
name = "danger-python"
version = "0.1.0"
description = "Write your Dangerfiles in Python."
authors = [
    "Orta Therox <danger@orta.io>",
    "Jakub Turek <jkbturek@gmail.com>",
    "Danger org contributors",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
click-default-group = "^1.2.2"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"
black = "^22.10"
isort = "^5.10.0"
mypy = "^0.982"
flake8 = "^5.0.4"
pylint = "^2.15.5"
jinja2 = "^3.1.2"
pyfakefs = "^5.0.0"
stringcase = "^1.2.0"
testfixtures = "^7.0.0"

[tool.poetry.scripts]
danger-python = 'danger_python.cli:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

